--- a/public/css/app.css
+++ b/public/css/app.css
@@ -120,7 +120,7 @@ h1 {
     padding: 8px;
 }
 
-.complete {
+.modal {
   display: none;
   z-index: 1000;
   background-color: #fff;
@@ -142,6 +142,10 @@ h1 {
   border: none;
   border-radius: 8px;
   font-size: 1rem;
+}
+
+.welcome.show {
+  display: block;
 }
 
 .complete.show {
